--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ universal = 1
 #no-vcs = 1
 
 
-[SPHINX]
-project    = ps herald 
-copyright  = 2016, Thomas Setz
+[GLOBAL]
+project_name    = ps herald 
+copyright       = 2018, Dr. Setz
 
