adapted tox file

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ default = http://vl-pypi.haufe-ep.de:21111/ps/DEVELOPMENT/+simple
 DEVELOPMENT = http://vl-pypi.haufe-ep.de:21111/ps/DEVELOPMENT/+simple
 INTEGRATION = http://vl-pypi.haufe-ep.de:21111/ps/INTEGRATION/+simple
 AURORA = http://vl-pypi.haufe-ep.de:21111/aurora/pypi+aurora/+simple
+install_command=pip install --index-url=http://setz.dnshome.de/setzt/DEVELOPMENT --trusted-host setz.dnshome.de {opts} {packages}
 
 [testenv]
 setenv =
