--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 twine
-ps.basic
+#ps.basic
 alembic==0.9.6
 #Babel==2.5.1
 blinker==1.4
@@ -21,13 +21,13 @@ idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
 Mako==1.0.7
-MarkupSafe==1.0
+#MarkupSafe==1.0
 PyJWT==1.5.3
 python-dateutil==2.6.1
 python-dotenv==0.7.1
 python-editor==1.0.3
 pytz==2017.2
-requests==2.18.4
+requests
 six==1.11.0
 SQLAlchemy==1.1.14
 urllib3==1.22
