--- a/setup.cfg
+++ b/setup.cfg
@@ -6,3 +6,11 @@ tag = True
 [bumpversion:file:setup.py]
 search = {current_version}
 replace = {new_version}
+
+[tool:pytest]
+testpaths = tests
+
+[coverage:run]
+branch = True
+source =
+    flaskr
