--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,9 @@ deps      = coverage
             pytest-cov
             sphinx
             sphinx_rtd_theme
+            beautifulsoup4
+            flask
+            sqlalchemy 
 commands =
     /bin/rm -fR LOG
 
@@ -17,12 +20,16 @@ commands =
 changedir = tests
 commands =
     /bin/rm -fR LOG
-    py.test  --cov=ps               --cov-report term --cov-report html --junitxml=tests/junit_data/test_unit.xml  --doctest-glob="*.rst" --doctest-modules   test_ps_basic_utils.py
-    py.test  --cov=ps  --cov-append --cov-report term --cov-report html --junitxml=tests/junit_data/test_unit.xml  --doctest-glob="*.rst" --doctest-modules   test_ps_basic_Lock.py
-    py.test  --cov=ps  --cov-append --cov-report term --cov-report html --junitxml=tests/junit_data/test_doc.xml   --doctest-modules ../src/ps/basic/fsm.py
+    #py.test  --cov=ps.herald               --cov-report term --cov-report html --junitxml=tests/junit_data/test_unit.xml  --doctest-glob="*.rst" --doctest-modules   test_ps_herald_base1.py
+    #py.test  -s  --cov=ps.herald  --cov-append --cov-report term --cov-report html --junitxml=tests/junit_data/test_unit.xml  --doctest-glob="*.rst" --doctest-modules   test_db.py
+    py.test  -s  --cov=ps.herald  --cov-append --cov-report term --cov-report html --junitxml=tests/junit_data/test_unit.xml  --doctest-glob="*.rst" --doctest-modules   test_neelix/test_cmd_line.py
+    #py.test  -s  --cov=ps.herald  --cov-append --cov-report term --cov-report html --junitxml=tests/junit_data/test_unit.xml  --doctest-glob="*.rst" --doctest-modules   test_ps_herald_base3.py
+    #py.test  --cov=ps.herald  --cov-append --cov-report term --cov-report html --junitxml=tests/junit_data/test_doc.xml   --doctest-modules ../src/ps/herald/util.py
 
 [testenv:docs]
 changedir = docs 
+setenv =
+    DEV_STAGE = TESTING 
 commands =
     sphinx-build -E -W -c ../docs/source/ -b html ../docs/source/ ../docs/build/html
 
@@ -37,6 +44,7 @@ deps =
     flake8-docstrings>=1.3.1
     flake8-import-order>=0.9
     flake8-typing-imports>=1.1
+    flake8-rst-docstrings 
     pep8-naming
 commands =
     # D103  ==> Missing docstring in public function
