--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ tests/tmp_test_run
 tmp_test_run
 herald.sqlite_d
 ps_neelix_t.cfg
+src/ps/herald/templates/obsolete
 
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
