--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ deps      = coverage
             sphinx_rtd_theme
             beautifulsoup4
             flask
+            flask-cors
             sqlalchemy 
 commands =
     /bin/rm -fR LOG
