--- a/tox.ini
+++ b/tox.ini
@@ -20,12 +20,13 @@ commands =
 [testenv:tests]
 changedir = tests
 commands =
-    /bin/rm -fR LOG
-    #py.test  --cov=ps.herald               --cov-report term --cov-report html --junitxml=tests/junit_data/test_unit.xml  --doctest-glob="*.rst" --doctest-modules   test_ps_herald_base1.py
-    #py.test  -s  --cov=ps.herald  --cov-append --cov-report term --cov-report html --junitxml=tests/junit_data/test_unit.xml  --doctest-glob="*.rst" --doctest-modules   test_db.py
-    py.test  -s  --cov=ps.herald  --cov-append --cov-report term --cov-report html --junitxml=tests/junit_data/test_unit.xml  --doctest-glob="*.rst" --doctest-modules   test_neelix/test_cmd_line.py
-    #py.test  -s  --cov=ps.herald  --cov-append --cov-report term --cov-report html --junitxml=tests/junit_data/test_unit.xml  --doctest-glob="*.rst" --doctest-modules   test_ps_herald_base3.py
-    #py.test  --cov=ps.herald  --cov-append --cov-report term --cov-report html --junitxml=tests/junit_data/test_doc.xml   --doctest-modules ../src/ps/herald/util.py
+    py.test  --cov=ps.herald               --cov-report term --cov-report html --junitxml=tests/junit_data/test_unit.xml       test_1_a.py
+    py.test  -s  --cov=ps.herald  --cov-append --cov-report term --cov-report html --junitxml=tests/junit_data/test_unit.xml   test_2_cmdline.py
+    py.test  -s  --cov=ps.herald  --cov-append --cov-report term --cov-report html --junitxml=tests/junit_data/test_unit.xml   test_3_factory.py
+    py.test  -s  --cov=ps.herald  --cov-append --cov-report term --cov-report html --junitxml=tests/junit_data/test_unit.xml   test_4_db_layer_with_test_data.py 
+    py.test  -s  --cov=ps.herald  --cov-append --cov-report term --cov-report html --junitxml=tests/junit_data/test_unit.xml   test_5_1_ps_bridge.py 
+    py.test  -s  --cov=ps.herald  --cov-append --cov-report term --cov-report html --junitxml=tests/junit_data/test_unit.xml   test_5_2_ps_neelix.py
+    py.test  -s  --cov=ps.herald  --cov-append --cov-report term --cov-report html --junitxml=tests/junit_data/test_unit.xml   test_5_3_ps_herald.py
 
 [testenv:docs]
 changedir = docs 
