--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,4 @@
-graft ps/herald/static
-graft ps/herald/templates
 graft src/ps/herald/static
 graft src/ps/herald/templates
+graft src/ps/herald/graph_ql
 global-exclude *.pyc
