--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,7 @@ deps      = coverage
             flask
             flask-cors
             sqlalchemy 
+            gitpython
 commands =
     /bin/rm -fR LOG
 
