--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,10 @@ tag = True
 search = {current_version}
 replace = {new_version}
 
+[bumpversion:file:docs/source/conf.py]
+search = {current_version}
+replace = {new_version}
+
 [tool:pytest]
 testpaths = tests
 
