--- a/docs/source/requirements.txt
+++ b/docs/source/requirements.txt
@@ -1,3 +1,53 @@
+alabaster==0.7.12
+aniso8601==7.0.0
+attrs==20.3.0
+Babel==2.9.0
+certifi==2020.12.5
+chardet==4.0.0
+click==7.1.2
+docopt==0.6.2
+docutils==0.16
+Flask==1.1.2
+Flask-Cors==3.0.10
+Flask-GraphQL==2.0.1
+Flask-SQLAlchemy==2.4.4
 graphene==2.1.8
+graphene-sqlalchemy==2.3.0
 graphql-core==2.3.2
 graphql-relay==2.0.1
+graphql-server-core==1.2.0
+idna==2.10
+imagesize==1.2.0
+iniconfig==1.1.1
+itsdangerous==1.1.0
+Jinja2==2.11.3
+MarkupSafe==1.1.1
+packaging==20.9
+pluggy==0.13.1
+promise==2.3
+ps-herald==1.0
+ps.basic==1.2.17
+py==1.10.0
+Pygments==2.8.0
+pygraphviz==1.7
+pyparsing==2.4.7
+pytest==6.2.2
+pytz==2021.1
+requests==2.25.1
+Rx==1.6.1
+singledispatch==3.4.0.3
+six==1.15.0
+snowballstemmer==2.1.0
+Sphinx==3.5.1
+sphinx-rtd-theme==0.5.1
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
+SQLAlchemy==1.3.23
+toml==0.10.2
+urllib3==1.26.3
+Werkzeug==1.0.1
+
