skip ps_bridge tests on platform other than darwin

--- a/tox.ini
+++ b/tox.ini
@@ -25,7 +25,7 @@ commands =
     py.test  -s  --cov=ps.herald  --cov-append --cov-report term --cov-report html --junitxml=tests/junit_data/test_unit.xml   test_2_cmdline.py
     py.test  -s  --cov=ps.herald  --cov-append --cov-report term --cov-report html --junitxml=tests/junit_data/test_unit.xml   test_3_factory.py
     py.test  -s  --cov=ps.herald  --cov-append --cov-report term --cov-report html --junitxml=tests/junit_data/test_unit.xml   test_4_db_layer_with_test_data.py 
-#    py.test  -s  --cov=ps.herald  --cov-append --cov-report term --cov-report html --junitxml=tests/junit_data/test_unit.xml   test_5_1_ps_bridge.py 
+    py.test  -s  --cov=ps.herald  --cov-append --cov-report term --cov-report html --junitxml=tests/junit_data/test_unit.xml   test_5_1_ps_bridge.py 
     py.test  -s  --cov=ps.herald  --cov-append --cov-report term --cov-report html --junitxml=tests/junit_data/test_unit.xml   test_5_2_ps_neelix.py
     py.test  -s  --cov=ps.herald  --cov-append --cov-report term --cov-report html --junitxml=tests/junit_data/test_unit.xml   test_5_3_ps_herald.py
 
