--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -10,4 +10,7 @@ pipelines:
           - pip install tox 
           - tox -e tests 
           - tox -e docs 
-          - # twine upload --repository-url https://test.pypi.org/legacy/ -u ${TEST_PYPI_USERNAME}  -p  ${TEST_PYPI_PASS} dist/*
+          - tox -e increment_release
+          - tox -e build 
+          - pip install twine 
+          -  twine upload --repository-url https://test.pypi.org/legacy/ -u ${TEST_PYPI_USERNAME}  -p  ${TEST_PYPI_PASS} dist/*
